--- a/My Space/notebooks.css
+++ b/My Space/notebooks.css
@@ -32,6 +32,11 @@ body {
     font-weight: bold;
 }
 
+.logo-text a{
+    text-decoration: none;
+    color:  black;
+}
+
 .navigation {
     display: flex;
     align-items: center;
